--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
+    <meta content="Hacknarök Hackathon - trzecia edycja" name="description">
+    <meta name="author" content="EESTEC AGH Kraków">
+    <meta name="keywords" content="EESTEC AGH Kraków, Hacknarok, Hacknarök, hackathon, internet of things">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-      <meta name="description" content="EESTEC AGH Kraków">
-      <meta name="author" content="EESTEC AGH Kraków IT Team">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>EESTEC AGH Kraków</title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but EESTEC AGH Kraków page doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-  </body>
+    <link href="<%= BASE_URL %>favicon.png" rel="icon" type="image/png">
+    <title>Hacknarök</title>
+</head>
+<body>
+<noscript>
+    <strong>We're sorry but hack-front-vue doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+</noscript>
+<div id="app"></div>
+<!-- built files will be auto injected -->
+</body>
 </html>
