added fonts, changed main component

--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta content="Hacknarök Hackathon - trzecia edycja" name="description">
+    <meta content="Strona Główna EESTEC AGH Kraków" name="description">
     <meta name="author" content="EESTEC AGH Kraków">
-    <meta name="keywords" content="EESTEC AGH Kraków, Hacknarok, Hacknarök, hackathon, internet of things">
+    <meta content="EESTEC AGH Kraków, EESTEC, student organization, organizacja studencka, AGH, UST" name="keywords">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="<%= BASE_URL %>favicon.png" rel="icon" type="image/png">
-    <title>Hacknarök</title>
+    <title>EESTEC AGH Kraków</title>
 </head>
 <body>
 <noscript>
-    <strong>We're sorry but hack-front-vue doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+    <strong>We're sorry but eestec-agh-krakow doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
 </noscript>
 <div id="app"></div>
 <!-- built files will be auto injected -->
