--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta content="Strona Główna EESTEC AGH Kraków" name="description">
-    <meta name="author" content="EESTEC AGH Kraków">
-    <meta content="EESTEC AGH Kraków, EESTEC, student organization, organizacja studencka, AGH, UST" name="keywords">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link href="<%= BASE_URL %>favicon.png" rel="icon" type="image/png">
-    <title>EESTEC AGH Kraków</title>
+	<meta content="Strona Główna EESTEC AGH Kraków" name="description"/>
+	<meta name="author" content="EESTEC AGH Kraków"/>
+	<meta content="EESTEC AGH Kraków, EESTEC, student organization, organizacja studencka, AGH, UST" name="keywords"/>
+	<meta charset="utf-8"/>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+	<meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+	<link href="<%= BASE_URL %>favicon.png" rel="icon" type="image/png"/>
+	<title>EESTEC AGH Kraków</title>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-155317404-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || []
+
+		function gtag () {dataLayer.push(arguments)}
+
+		gtag('js', new Date())
+
+		gtag('config', 'UA-155317404-1')
+	</script>
 </head>
 <body>
 <noscript>
-    <strong>We're sorry but eestec-agh-krakow doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+	<strong>We're sorry but eestec-agh-krakow doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
 </noscript>
 <div id="app"></div>
 <!-- built files will be auto injected -->
